--- a/modules/insurance_collective/locale/fr_FR.po
+++ b/modules/insurance_collective/locale/fr_FR.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:contract.contract,is_group:"
+msgctxt "field:contract,is_group:"
 msgid "Group Contract"
 msgstr "Contrat Collectif"
 
@@ -54,7 +54,7 @@ msgctxt "model:tag,name:tag_group"
 msgid "Group"
 msgstr "Groupe"
 
-msgctxt "view:contract.contract:"
+msgctxt "view:contract:"
 msgid "Enrollments"
 msgstr "Affiliations"
 
