--- a/modules/billing/locale/fr_FR.po
+++ b/modules/billing/locale/fr_FR.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:contract.contract,manual_billing:"
+msgctxt "field:contract,manual_billing:"
 msgid "Manual Billing"
 msgstr "Tarification Manuelle"
 
@@ -10,6 +10,6 @@ msgctxt "model:tag,name:tag_billing"
 msgid "Cotisation"
 msgstr "Cotisation"
 
-msgctxt "view:contract.contract:"
+msgctxt "view:contract:"
 msgid "Billing"
 msgstr "Cotisation"
