--- a/modules/insurance_contract_subscription/locale/fr_FR.po
+++ b/modules/insurance_contract_subscription/locale/fr_FR.po
@@ -2,54 +2,54 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "%s is not a valid start date for product %s"
 msgstr "%s n'est pas une date d'effet compatible avec le produit %s"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "A product must be provided"
 msgstr "Saisir un produit"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "A start date must be provided"
 msgstr "Saisir la date d'effet"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "A subscriber must be provided"
 msgstr "Saisir le Souscripteur"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "At least an option must be selected"
 msgstr "Saisir une garantie"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "At least one option must be selected for %s"
 msgstr "Saisir au moins une garantie pour %s"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "Everything is good !"
 msgstr "Tout est bon!"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "Object %s is currently locked by user %s"
 msgstr "L'objet %s est verrouillé par l'utilisateur %s"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "Option %s is not eligible"
 msgstr "La garantie %s n'est pas éligible"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "Option %s must be subscribed after %s"
 msgstr "La Garantie %s doit être souscrite après le %s"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid ""
 "The payment bank account is required as the payment mode is Direct Debit"
 msgstr ""
 "Le compte bancaire de paiement doit être renseigné, le mode de paiement "
 "choisit étant le prélèvement"
 
-msgctxt "error:contract.contract:"
+msgctxt "error:contract:"
 msgid "There must be at least one covered element"
 msgstr "Saisir un élement couvert"
 
@@ -61,35 +61,35 @@ msgctxt "error:ins_contract.subscription_process_finder:"
 msgid "Please pick a process from the selection"
 msgstr "Choisir un processus de la sélection"
 
-msgctxt "field:contract.contract,current_log:"
+msgctxt "field:contract,current_log:"
 msgid "Current Log"
 msgstr ""
 
-msgctxt "field:contract.contract,current_state:"
+msgctxt "field:contract,current_state:"
 msgid ""
 msgstr " "
 
-msgctxt "field:contract.contract,doc_received:"
+msgctxt "field:contract,doc_received:"
 msgid "All Document Received"
 msgstr "Documents Reçus"
 
-msgctxt "field:contract.contract,logs:"
+msgctxt "field:contract,logs:"
 msgid "Task"
 msgstr "Tâche"
 
-msgctxt "field:contract.contract,product_desc:"
+msgctxt "field:contract,product_desc:"
 msgid "Description"
 msgstr "Description"
 
-msgctxt "field:contract.contract,subscriber_desc:"
+msgctxt "field:contract,subscriber_desc:"
 msgid "Summary"
 msgstr "Synthèse"
 
-msgctxt "field:contract.contract,subscriber_kind:"
+msgctxt "field:contract,subscriber_kind:"
 msgid "Subscriber Kind"
 msgstr "Type"
 
-msgctxt "field:contract.contract,subscription_mgr:"
+msgctxt "field:contract,subscription_mgr:"
 msgid "Subscription Manager"
 msgstr ""
 
